Plugins versions seems to be working